--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
 
 <body>
     <header>
-        <img src="img/pattern.png" alt="top image" />
-        <img src="img/logo.svg" alt="logo" />
+
+        <img src="img/pattern.png" alt="pattern" />
+        <div id="logo">
+            <img src="img/logo.svg" alt="logo" />
+        </div>
     </header>
 
+    <h1> <strong> Internet deve essere al servizio del "bene pubblico: il manifesto di Tim Berners-Lee</strong></h1>
+    <p>Scritto da <strong> The Booleaner</strong> <br> il 10/10/2020</p>
+
+    <footer>
+        <h4>Potrebbero interessarti</h4>
+        <img src="img/monitor.jpg" alt="monitor">
+        <br>
+        <img src="img/graph.jpg" alt="graph">
+    </footer>
 </body>
 
 </html>
+<img src="img/pattern.png" alt="top image" />
