--- a/index.html
+++ b/index.html
@@ -6,28 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+<!---->
 
 <body>
     <header>
-
-        <img src="img/pattern.png" alt="pattern" />
-        <div id="logo">
-            <img src="img/logo.svg" alt="logo" />
-        </div>
+        <img id="logo" src="img/logo.svg" alt="Logo" />
     </header>
 
-    <h1> <strong> Internet deve essere al servizio del "bene pubblico: il manifesto di Tim Berners-Lee</strong></h1>
-    <p>Scritto da <strong> The Booleaner</strong> <br> il 10/10/2020</p>
+    <main>
+        <h1>Internet deve essere al servizio del bene pubblico il manifesto di Tim Barnes-Lee</h1>
+        <div class="article-info">
+            <p>Scritto da <span id="autor">The Booleaner</span></p>
+            <p id="published">scritto il 0/10/2020</p>
+        </div>
+        <div>
+            <img src="img/tim-1.jpg" alt="Tim" />
+            <img src="img/tim-2.jpg" alt="Tim due" />
+        </div>
+        <div>
+            <p>hdhdfhshertherherherherhe</p>
+            <p>gdfhdfhdfhdhdhddh</p>
+        </div>
+        <div>
+            Lorem, ipsum dolor sit amet <mark id="marcatore"> adipisicing elit. Velit aliquid</mark> ab cupiditate vero
+            nisi
+            sit,
+            voluptate earum commodi error soluta atque amet, iure est qui dicta fugit officia laudantium eos.
+        </div>
+
+        <table id="article-table">
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+            </thead>
+            <tbody>
+                </tr>
+                <tr class="odd">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab inventore voluptates debitis
+                        est dolore culpa quos consequatur nostrum vero earum maxime cumque, officiis totam illo deserunt
+                        temporibus placeat neque.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab inventore voluptates debitis
+                        est dolore culpa quos consequatur nostrum vero earum maxime cumque, officiis totam illo deserunt
+                        temporibus placeat neque.</td>
+                </tr>
+                <tr class="odd">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab inventore voluptates debitis
+                        est dolore culpa quos consequatur nostrum vero earum maxime cumque, officiis totam illo deserunt
+                        temporibus placeat neque.</td>
+                </tr>
+            </tbody>
+
+        </table>
+
+    </main>
 
     <footer>
-        <h4>Potrebbero interessarti</h4>
-        <img src="img/monitor.jpg" alt="monitor">
-        <br>
-        <img src="img/graph.jpg" alt="graph">
+        <h2>Potrebbe interessarti</h2>
+        <div class="footer-image" id="article-link-1">Lorem ipsum</div>
+        <div class="footer-image" id="article-link-2">lorem ipsum</div>
+
     </footer>
 </body>
 
 </html>
-<img src="img/pattern.png" alt="top image" />
